Rebound-Windows: Fix Firefox Profile Detection Bug

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ Rebound/Build/
 Rebound/Rebound
 
 Rebound/Scripts/Firefox/list.json
+
+Rebound/Scripts/Firefox/lua54.dll
+
+Rebound/Scripts/Firefox/lua54.exe
