Rebound-Windows: Add Meta for Altium to Close Document

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ Rebound/Scripts/Firefox/list.json
 Rebound/Scripts/Firefox/lua54.dll
 
 Rebound/Scripts/Firefox/lua54.exe
+
+Rebound/Benjamin/Mom/Labels/r1_status.lbl
