--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ Rebound/Scripts/Firefox/lua54.dll
 Rebound/Scripts/Firefox/lua54.exe
 
 Rebound/Benjamin/Mom/Labels/r1_status.lbl
+
+Rebound/Benjamin/Mom/Labels/r1_pname.lbl
