Rebound-Windows: Add Prefix and Postfix for TCP[E&B]

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Rebound/Scripts/Firefox/lua54.exe
 Rebound/Benjamin/Mom/Labels/r1_status.lbl
 
 Rebound/Benjamin/Mom/Labels/r1_pname.lbl
+
+Rebound/usersbijanappdata*
